[package]
name = "metro"
version = "0.1.0"
authors = ["Christian Vallentin"]
edition = "2018"
# TODO: description
# TODO: keywords
# TODO: categories
license = "MIT"
repository = "https://github.com/vallentin/metro"
documentation = "https://docs.rs/metro"
readme = "README.md"
exclude = [".travis.yml"]

[badges]
travis-ci = { repository = "vallentin/metro" }

[dependencies]
