[package]
name = "metro"
version = "0.1.1"
authors = ["Christian Vallentin"]
edition = "2018"
description = "Metro is a crate for creating and rendering graphs similar to `git log --graph`"
keywords = ["pretty-printing", "cli", "print"]
categories = ["algorithms", "command-line-interface", "visualization", "rendering"]
license = "MIT"
repository = "https://github.com/vallentin/metro"
documentation = "https://docs.rs/metro"
readme = "README.md"
exclude = [".travis.yml"]

[badges]
travis-ci = { repository = "vallentin/metro" }

[dependencies]
